--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -40,10 +40,33 @@ p {
   @apply text-lg mb-3;
 }
 
+input,
+textarea {
+  @apply px-2 py-1 rounded-md bg-gray-300 bg-opacity-25 border-2 border-gray-500 transition-colors duration-300;
+}
+
+input::placeholder,
+textarea::placeholder {
+  @apply text-black;
+}
+
+input:hover,
+textarea:hover {
+  @apply bg-primary-300 border-primary-500 bg-opacity-25;
+}
+
+input:focus,
+textarea:focus {
+  @apply bg-primary-300 border-primary-500 bg-opacity-50;
+}
+
+button,
 .btn {
   @apply inline-block px-2 py-1 rounded-md border-2 border-primary-600 bg-primary-500 bg-opacity-50 transition-colors duration-200;
 }
 
+button:hover,
+button:focus,
 .btn:hover,
 .btn:focus {
   @apply bg-opacity-75;
