--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -40,13 +40,14 @@ p {
   @apply text-lg mb-3;
 }
 
-pre[class*="language-"], code[class*="language-"] {
+pre[class*="language-"],
+code[class*="language-"] {
   @apply text-lg;
 }
 
 input,
 textarea {
-  @apply px-2 py-1 rounded-md bg-gray-300 bg-opacity-25 border-2 border-gray-500 transition-colors duration-300;
+  @apply px-2 py-1 rounded-md bg-gray-300 bg-opacity-20 border-2 border-gray-500 transition-colors duration-300;
 }
 
 input::placeholder,
@@ -56,7 +57,7 @@ textarea::placeholder {
 
 input:hover,
 textarea:hover {
-  @apply bg-primary-300 border-primary-500 bg-opacity-25;
+  @apply bg-primary-300 border-primary-500 bg-opacity-20;
 }
 
 input:focus,
@@ -73,7 +74,7 @@ button:hover,
 button:focus,
 .btn:hover,
 .btn:focus {
-  @apply bg-opacity-75;
+  @apply bg-opacity-70;
 }
 
 .btn--sm {
@@ -82,7 +83,7 @@ button:focus,
 }
 
 .btn--translucent {
-  @apply text-black bg-opacity-25 border-opacity-25;
+  @apply text-black bg-opacity-20 border-opacity-20;
 }
 
 .btn--translucent:hover,
@@ -91,30 +92,29 @@ button:focus,
 }
 
 .card {
-  @apply p-3 rounded-lg border-2 border-primary-600 bg-primary-500 bg-opacity-25 border-opacity-25 transition-colors duration-200;
+  @apply p-3 rounded-lg border-2 border-primary-600 bg-primary-500 bg-opacity-20 border-opacity-20 transition-colors duration-200;
 }
 
 .card:hover,
 .card:focus {
-  @apply bg-opacity-50 border-opacity-75;
+  @apply bg-opacity-50 border-opacity-70;
 }
 
 .ftag {
-  @apply inline-block border text-sm rounded-md bg-primary-300 border-primary-500 bg-opacity-25 duration-200;
+  @apply inline-block border text-sm rounded-md bg-primary-300 border-primary-500 bg-opacity-20 transition-colors duration-200;
   padding: 0.125rem 0.5rem;
-  transition-property: color opacity;
 }
 
 .ftag--active {
-  @apply bg-opacity-75;
+  @apply bg-primary-500 bg-opacity-50;
 }
 
 .ftag--disabled {
-  @apply bg-gray-400 border-gray-500 bg-opacity-25;
+  @apply bg-gray-400 border-gray-500 bg-opacity-20;
 }
 
 .gatsby-highlight-code-line {
-  @apply block bg-white bg-opacity-25 border-white -mx-4 pl-3 pr-4 border-white border-opacity-75;
+  @apply block bg-white bg-opacity-20 border-white -mx-4 pl-3 pr-4 border-white border-opacity-70;
   border-left-width: 0.25rem;
 }
 
@@ -124,7 +124,7 @@ button:focus,
 
 .gatsby-highlight pre[class*="language-"] {
   @apply m-0 p-4;
-} 
+}
 
 .gatsby-code-title {
   @apply mt-5 px-4 py-1 font-semibold bg-gray-800 text-white rounded-t-lg;
@@ -134,17 +134,22 @@ button:focus,
   @apply mt-0 rounded-t-none;
 }
 
+:not(pre) > code[class*="language-"] {
+	@apply text-primary-900 bg-gray-300 bg-opacity-40;
+}
+
 .markdown a {
   @apply font-semibold underline;
 }
 
 /* Header autolink */
 .markdown a.anchor {
-  @apply text-primary-700 opacity-75 transition-opacity duration-200;
+  @apply text-primary-700 opacity-70 transition-opacity duration-200;
   transform: translateY(4px);
 }
 
-.markdown a.anchor:hover, .markdown.anchor:focus {
+.markdown a.anchor:hover,
+.markdown.anchor:focus {
   @apply opacity-100;
 }
 
@@ -236,5 +241,56 @@ button:focus,
   h5,
   h6 {
     @apply text-2xl mt-6;
+  }
+}
+
+@screen dark {
+  html {
+    @apply bg-gray-900 text-gray-100;
+  }
+
+  input,
+  textarea {
+    @apply bg-opacity-10;
+  }
+
+  input::placeholder,
+  textarea::placeholder {
+    @apply text-white;
+  }
+
+  input:hover,
+  textarea:hover {
+    @apply bg-primary-300 border-primary-500 bg-opacity-20;
+  }
+
+  input:focus,
+  textarea:focus {
+    @apply bg-primary-300 border-primary-500 bg-opacity-30;
+  }
+
+  button,
+  .btn {
+    @apply bg-opacity-30;
+  }
+
+  button:hover,
+  button:focus,
+  .btn:hover,
+  .btn:focus {
+    @apply bg-opacity-60;
+  }
+
+  .card {
+    @apply bg-opacity-10 border-opacity-10;
+  }
+
+  .card:hover,
+  .card:focus {
+    @apply bg-opacity-20 border-opacity-50;
+  }
+
+  :not(pre) > code[class*="language-"] {
+    @apply text-primary-100 bg-white bg-opacity-20;
   }
 }
