--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -113,17 +113,21 @@ button:focus,
   @apply bg-gray-400 border-gray-500 bg-opacity-20;
 }
 
-.gatsby-highlight-code-line {
-  @apply block bg-white bg-opacity-20 border-white -mx-4 pl-3 pr-4 border-white border-opacity-70;
-  border-left-width: 0.25rem;
-}
-
 .gatsby-highlight {
   @apply overflow-auto rounded-lg my-5;
 }
 
 .gatsby-highlight pre[class*="language-"] {
   @apply m-0 p-4;
+}
+
+.gatsby-highlight code[class*="language-"] {
+  @apply inline-block min-w-full;
+}
+
+.gatsby-highlight-code-line {
+  @apply block bg-white bg-opacity-20 border-white -mx-4 pl-3 pr-4 border-white border-opacity-70;
+  border-left-width: 0.25rem;
 }
 
 .gatsby-code-title {
