Update heading spacing

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -18,22 +18,22 @@ h3,
 h4,
 h5,
 h6 {
-  @apply font-semibold;
+  @apply font-semibold leading-tight;
 }
 
 h1 {
-  @apply text-3xl mt-8;
+  @apply text-3xl mt-12 mb-4;
 }
 
 h2 {
-  @apply text-2xl mt-6;
+  @apply text-2xl mt-10 mb-3;
 }
 
 h3,
 h4,
 h5,
 h6 {
-  @apply text-xl mt-4;
+  @apply text-xl mt-6 mb-2;
 }
 
 p {
