--- a/src/components/nav.module.css
+++ b/src/components/nav.module.css
@@ -2,6 +2,10 @@
   @apply fixed z-30 w-full bg-gray-100 h-24 transition-all duration-300 ease-out;
 }
 
+.navHero {
+  @apply bg-transparent;
+}
+
 .navShrink {
   @apply shadow;
   height: 56px;
@@ -10,6 +14,10 @@
 @screen dark {
   .nav {
     @apply bg-gray-900;
+  }
+
+  .navHero {
+    @apply bg-transparent;
   }
 
   .navShrink {
