--- a/src/lib/global.pcss
+++ b/src/lib/global.pcss
@@ -6,6 +6,10 @@ html {
   @apply text-gray-900 bg-gray-100 break-words overflow-x-hidden;
 }
 
+body {
+  @apply leading-normal;
+}
+
 h1,
 h2,
 h3,
