Add autolink headings

--- a/src/lib/global.pcss
+++ b/src/lib/global.pcss
@@ -16,7 +16,8 @@ h3,
 h4,
 h5,
 h6 {
-  @apply font-semibold leading-tight;
+  @apply relative font-semibold leading-tight;
+  scroll-padding-top: 60px;
 }
 
 h1 {
