Fix mobile autolink anchor

--- a/src/lib/global.pcss
+++ b/src/lib/global.pcss
@@ -188,7 +188,7 @@ button:focus,
 
 /* Header autolink */
 .markdown a.anchor {
-  @apply opacity-70 transition-opacity text-primary-700 duration-200;
+  @apply opacity-70 pl-1 transition-opacity text-primary-700 duration-200 inline-block;
   transform: translateY(4px);
 }
 
