Fix scrollbar color scheme

--- a/src/lib/global.pcss
+++ b/src/lib/global.pcss
@@ -36,6 +36,10 @@ code[class*='language-'] {
 
 /* prism compat end */
 
+:root {
+  color-scheme: light dark;
+}
+
 ::selection {
   @apply bg-primary-500 text-black @dark:bg-primary-800 @dark:text-white;
 }
