--- a/src/lib/global.pcss
+++ b/src/lib/global.pcss
@@ -175,29 +175,29 @@ button:focus,
   @apply bg-gray-400 bg-opacity-20 border-gray-500;
 }
 
-.gatsby-highlight {
+.shiki-highlight {
   @apply rounded-lg my-5 overflow-auto;
 }
 
-.gatsby-highlight pre[class*='language-'] {
+.shiki-highlight pre[class*='language-'] {
   @apply m-0 p-4 overflow-auto;
 }
 
-.gatsby-highlight code[class*='language-'] {
+.shiki-highlight code[class*='language-'] {
   @apply min-w-full inline-block;
 }
 
-.gatsby-highlight-code-line {
+.shiki-highlight-code-line {
   @apply bg-white border-white bg-opacity-10 border-opacity-70 -ml-4 pr-4 pl-3 inline-block;
   border-left-width: 0.25rem;
   width: calc(100% + 2rem);
 }
 
-.gatsby-code-title {
+.shiki-code-title {
   @apply rounded-t-lg font-semibold bg-gray-800 mt-5 text-white py-1 px-4;
 }
 
-.gatsby-code-title ~ .gatsby-highlight {
+.shiki-code-title ~ .shiki-highlight {
   @apply rounded-t-none mt-0;
 }
 
