Setup draft mode

--- a/src/lib/global.pcss
+++ b/src/lib/global.pcss
@@ -209,6 +209,10 @@ button:focus,
   @apply font-semibold text-primary-800 underline @dark:text-primary-300;
 }
 
+.markdown a code {
+  @apply font-normal;
+}
+
 /* Header autolink */
 .markdown a.anchor {
   @apply opacity-70 pl-1 transition-opacity text-primary-700 duration-200 inline-block;
