--- a/src/lib/global.pcss
+++ b/src/lib/global.pcss
@@ -237,7 +237,7 @@ button:focus,
 }
 
 .markdown li {
-  @apply mb-2 ml-6 pl-6;
+  @apply mb-2 ml-6 pl-1;
 }
 
 .markdown li > p:last-child {
@@ -261,7 +261,7 @@ button:focus,
 }
 
 .markdown .toc li {
-  @apply mx-0 my-1 lg:my-0.5;
+  @apply ml-4 mr-0 my-1 lg:my-0.5;
 }
 
 .markdown .toc a {
