--- a/src/lib/global.pcss
+++ b/src/lib/global.pcss
@@ -127,6 +127,14 @@ textarea:focus {
   @apply bg-primary-300 bg-opacity-50 border-primary-500 @dark:bg-primary-300 @dark:bg-opacity-30 @dark:border-primary-500;
 }
 
+details {
+  @apply my-6;
+}
+
+details > summary {
+  @apply text-lg text-gray-700 @dark:text-gray-300;
+}
+
 button,
 .btn {
   @apply rounded-md bg-primary-500 bg-opacity-50 border-2 border-primary-600 border-opacity-80 py-1 px-2 transition-colors duration-200 inline-block @dark:bg-opacity-30;
