--- a/src/lib/global.pcss
+++ b/src/lib/global.pcss
@@ -32,6 +32,7 @@ code {
 :not(pre) > code {
   padding: 0.1em 0.3em;
   border-radius: 0.3em;
+  white-space: pre-wrap;
 }
 
 /* prism compat end */
@@ -87,6 +88,10 @@ h6 {
 
 p {
   @apply text-lg mb-6 text-gray-700 @dark:text-gray-300;
+}
+
+ul ~ p {
+  @apply mt-6;
 }
 
 /* Inline code */
@@ -184,7 +189,7 @@ button:focus,
 }
 
 .shiki {
-  @apply rounded-lg my-5 overflow-auto m-0 p-4;
+  @apply rounded-lg my-5 overflow-auto mx-0 p-4;
 }
 
 .shiki code {
@@ -245,7 +250,7 @@ button:focus,
 }
 
 .markdown li > p:last-child {
-  @apply m-0;
+  @apply mx-0 mb-0;
 }
 
 .markdown blockquote {
