Add blog for "trailing slash for frameworks"

--- a/src/lib/global.pcss
+++ b/src/lib/global.pcss
@@ -140,6 +140,10 @@ details > summary {
   @apply text-lg text-gray-700 @dark:text-gray-300;
 }
 
+blockquote > details {
+  @apply my-0;
+}
+
 button,
 .btn {
   @apply rounded-md bg-primary-500 bg-opacity-50 border-2 border-primary-600 border-opacity-80 py-1 px-2 transition-colors duration-200 inline-block @dark:bg-opacity-30;
