--- a/src/lib/global.pcss
+++ b/src/lib/global.pcss
@@ -1,20 +1,3 @@
-/* preflight start */
-/*
-  windi and tailwind's preflight aren't exactly the same https://github.com/windicss/windicss/issues/537
-
-  known issues:
-  - line height slightly different 1.75rem vs 1.5em (negligable)
-*/
-
-fieldset,
-ol,
-ul {
-  margin: 0;
-  padding: 0;
-}
-
-/* preflight end */
-
 /* prism compat start */
 
 pre,
@@ -47,7 +30,7 @@ code {
 
 html,
 body {
-  @apply bg-gray-100 leading-normal text-gray-900 break-words overflow-x-hidden @dark:bg-gray-900 @dark:text-gray-100;
+  @apply font-sans bg-gray-100 leading-normal text-gray-900 break-words overflow-x-hidden @dark:bg-gray-900 @dark:text-gray-100;
 }
 
 h1,
